--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react-apexcharts"></script>
 </body>
 
 </html>
